; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_parse.c_UnassembleOnePageDown.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_parse.c_UnassembleOnePageDown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"UnassembleOnePageDown()\0A\00", align 1
@usOldDisasmSegment = common dso_local global i32 0, align 4
@ulOldDisasmOffset = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [38 x i8] c"UnassembleOnePageDown(): addr = %.8X\0A\00", align 1
@tempCmd = common dso_local global i64* null, align 8
@.str.2 = private unnamed_addr constant [44 x i8] c"UnassembleOnePageDown(): addr after = %.8X\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UnassembleOnePageDown(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %6 = call i32 @DPRINT(i32 ptrtoint ([25 x i8]* @.str to i32))
  %7 = load i32, i32* @usOldDisasmSegment, align 4
  %8 = load i32, i32* @ulOldDisasmOffset, align 4
  %9 = call i64 @GetLinearAddress(i32 %7, i32 %8)
  store i64 %9, i64* %3, align 8
  store i64 %9, i64* %4, align 8
  %10 = load i64, i64* %3, align 8
  %11 = trunc i64 %10 to i32
  %12 = call i32 @DPRINT(i32 %11)
  %13 = load i64*, i64** @tempCmd, align 8
  %14 = getelementptr inbounds i64, i64* %13, i64 0
  store i64 0, i64* %14, align 8
  store i64 0, i64* %5, align 8
  br label %15

15:                                               ; preds = %22, %1
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* %2, align 8
  %18 = icmp slt i64 %16, %17
  br i1 %18, label %19, label %25

19:                                               ; preds = %15
  %20 = load i64*, i64** @tempCmd, align 8
  %21 = call i32 @Disasm(i64* %3, i64* %20)
  br label %22

22:                                               ; preds = %19
  %23 = load i64, i64* %5, align 8
  %24 = add nsw i64 %23, 1
  store i64 %24, i64* %5, align 8
  br label %15

25:                                               ; preds = %15
  %26 = load i64, i64* %3, align 8
  %27 = trunc i64 %26 to i32
  %28 = call i32 @DPRINT(i32 %27)
  %29 = load i64, i64* %3, align 8
  %30 = load i64, i64* %4, align 8
  %31 = sub nsw i64 %29, %30
  %32 = load i32, i32* @ulOldDisasmOffset, align 4
  %33 = sext i32 %32 to i64
  %34 = add nsw i64 %33, %31
  %35 = trunc i64 %34 to i32
  store i32 %35, i32* @ulOldDisasmOffset, align 4
  %36 = call i32 (...) @RepaintSource()
  ret void
}

declare dso_local i32 @DPRINT(i32) #1

declare dso_local i64 @GetLinearAddress(i32, i32) #1

declare dso_local i32 @Disasm(i64*, i64*) #1

declare dso_local i32 @RepaintSource(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
